--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <section id="coach">
             <h2>Meet Coach Hannah</h2>
-            <img id="coach-img" src="media/images/Hannah-img.jpg" >
+            <img id="coach-img" src=Hannah-img.jpg>
             <p id="coach-bio">
                 Meet Hannah, our energetic personal trainer who practically runs on enthusiasm and endless determination! <br>
                 She’s always loved exercise—if it involves moving, sweating, or proving that burpees aren’t <em>that</em> bad, she’s all in. <br>
